V1.2.3 - remoção dos campos de enviar url de imagem e correção de admin nos itens
